--- a/WebRoot/mywc.html
+++ b/WebRoot/mywc.html
@@ -16,8 +16,8 @@
 		#coordinate{
 			color:red;
 		}
-		h2{
-			//color:red;
+		#table{
+			width:800px;
 		}
 	</style>
   </head>
@@ -35,7 +35,14 @@
   		<input type="button" id="compact" value="Compact"/>&nbsp;
 <!--   		<input type="button" id="preserve" value="Preserve"/>&nbsp; -->
   		<input type="button" id="test" value="test"/>&nbsp;<br/>
-  		Mouse coordinate:<span id="coordinate">0:0</span>
+  		<div id="table" align="center">
+  		<table width="68%" align="center">
+  			<tr align="left">
+  				<td>Mouse coordinate:<span id="coordinate">0:0</span></td>
+  				<td><span id="word"></span></td>
+  			</tr>
+  		</table>
+  		</div>
   	</div>
   	<script type="text/javascript" src="../src/mywc.js"></script>
   	<script type="text/javascript">
