--- a/WebRoot/mywc.html
+++ b/WebRoot/mywc.html
@@ -6,7 +6,9 @@
     <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
     <meta http-equiv="description" content="this is my page">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    
+	<link href="../src/bootstrap.min.css" rel="stylesheet">
+	<script type="text/javascript" src="../src/jquery.min.js"></script>
+	<script type="text/javascript" src="../src/bootstrap.min.js"></script>
     <!--<link rel="stylesheet" type="text/css" href="./styles.css">-->
 	<style type="text/css">
 		canvas{
@@ -31,26 +33,27 @@
     <div id="cv_div" align="center">
     	<h2>Word Cloud</h2>
     	<div id="op" align="left">
-    		&nbsp;<input type="button" id="Undo" value="Undo"/>&nbsp;
-    		&nbsp;<input type="button" id="Redo" value="Redo"/>&nbsp;
-    		&nbsp;<input type="button" id="CWL" value="Change Words List"/>&nbsp;
-    		&nbsp;<input type="button" id="Save" value="Save"/>&nbsp;
+			&nbsp;<input type="button" id="Undo" value="Undo" class="btn btn-success"/>&nbsp;
+			&nbsp;<input type="button" id="Redo" value="Redo" class="btn btn-success"/>&nbsp;
+			&nbsp;<input type="button" id="CWL" value="Change Words List" class="btn btn-success"/>&nbsp;
+			&nbsp;<input type="button" id="Save" value="Save" class="btn btn-success"/>&nbsp;
     		<select id="img_type">
 		   		<option value="jpg">jpg</option>
 		   		<option value="png">png</option>
-		   		<option value="bmp">bmp</option>
+				<option value="bmp">bmp</option>
   			</select>
-    		<br/>
+			&nbsp;<input type="button" value="Edit WordList" class="btn btn-success" id="EditWL" data-toggle="modal" data-target="#myModal"/>&nbsp;
+			<br/>
     	</div>
   		<canvas id="canvas" width="800" height="550"></canvas><br/>
-  		<input type="button" id="WordsList" value="Show Words List"/>&nbsp;
-  		<input type="button" id="showBox" value="Show Box"/>&nbsp;
-  		<input type="button" id="Word_level" value="Word-level Box"/>&nbsp;
-  		<input type="button" id="Letter_level" value="Letter-level Box"/>&nbsp;
-  		<input type="button" id="reLayout" value="ReLayout"/>&nbsp;
-  		<input type="button" id="ReLayout2" value="ReLayout2"/>&nbsp;
-  		<!-- <input type="button" id="Cforces" value="Center Forces"/>&nbsp; -->
-  		<input type="button" id="compact" value="Compact"/>&nbsp;
+		<input type="button" id="WordsList" value="Show Words List" class="btn btn-success"/>&nbsp;
+		<input type="button" id="showBox" value="Show Box" class="btn btn-success"/>&nbsp;
+		<input type="button" id="Word_level" value="Word-level Box" class="btn btn-success"/>&nbsp;
+		<input type="button" id="Letter_level" value="Letter-level Box" class="btn btn-success"/>&nbsp;
+		<input type="button" id="reLayout" value="ReLayout" class="btn btn-success"/>&nbsp;
+		<input type="button" id="ReLayout2" value="ReLayout2" class="btn btn-success"/>&nbsp;
+		<!-- <input type="button" id="Cforces" value="Center Forces"/>&nbsp; -->
+		<input type="button" id="compact" value="Compact" class="btn btn-success"/>&nbsp;
 <!--   		<input type="button" id="preserve" value="Preserve"/>&nbsp; -->
   		<!-- <input type="button" id="test" value="test"/>&nbsp; -->
   		<br/>
@@ -77,7 +80,36 @@
   		</table>
   		</div>
   	</div>
-  	<script type="text/javascript" src="../src/mywc.js"></script>
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+						&times;
+					</button>
+					<h4 class="modal-title" id="myModalLabel">
+						Word:Frequency (such as EdWordle:100)
+					</h4>
+				</div>
+				<div class="modal-body">
+					<textarea class="form-control required" id="modal_body" rows="6"></textarea>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">
+						Cancel
+					</button>
+					<button type="button" id="clearWL" class="btn btn-info">
+						Clear
+					</button>
+					<button type="button" id="CWLBP" class="btn btn-primary" data-dismiss="modal">
+						Enter
+					</button>
+				</div>
+			</div><!-- /.modal-content -->
+		</div><!-- /.modal -->
+	</div>
+
+	<script type="text/javascript" src="../src/mywc.js"></script>
   	<script type="text/javascript">
   		//window.onload = originalWordle;
   		window.onload = changeWL;
@@ -106,7 +138,10 @@
 		};
 		document.getElementById("WordsList").onclick = WordsList;
 		//document.getElementById("test").onclick = test;
-		
-  	</script>
+        document.getElementById("EditWL").onclick = showWLinModal;
+        document.getElementById("clearWL").onclick = clearWL;
+        document.getElementById("CWLBP").onclick = inputWL;
+
+	</script>
   </body>
 </html>
